style.css
:root {
    --gameboard-bg-color: rgb(71, 71, 71);
}

body {
    background-color: rgb(27, 27, 27);
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    height: 100vh;
    color: rgb(255, 255, 255);
    font-family: 'Mukta', sans-serif; /*size 200 400 700*/
}

.game-area {
    width: 500px;
    height: 700px;
    background-color: rgb(201, 201, 201);
    border-radius: 50px;
    margin: 5rem 0;
    display: flex;
    flex-direction: column;
    row-gap: 1.5rem;
    align-items: center;
    justify-content: center;
    box-shadow: 0px 5px 26px 11px rgba(0,0,0,0.70);
}
.player-indicator {
    background-color: var(--gameboard-bg-color);
    width: 8rem;
    height: 3rem;
    border-radius: 10px;
    text-align: center;
    line-height: 3rem;
    text-transform: uppercase;
    font-weight: 700;
    color: rgb(99, 99, 99);
    border: 5px solid rgb(105, 105, 105);
    box-sizing: content-box;
    margin: 0 2rem;
}

.player-indicator-active {
    border-color: white;
    color: white;
    text-decoration: 2px underline white;
}


.player-status-display {
    display: flex;
    justify-content: space-around;
}

.game-current-status {
    color: var(--gameboard-bg-color);
    background-color: var(--gameboard-bg-color);
    box-shadow: inset 0px 0px 5px 10px rgba(0,0,0,0.2);
    color: white;
    font-weight: 700;
    width: 70%;
    text-align: center;
    border-radius: 7px;
}
.game-board {
    display: grid;
    width: 400px;
    height: 400px;
    grid-template: 1fr 1fr 1fr/ 1fr 1fr 1fr;
    gap: 1.5rem;
}

.marker-cell {
    box-shadow: inset 0px 5px 26px 11px rgba(0,0,0,0.40);
    width: 100%;
    height: 100%;
    background-color: var(--gameboard-bg-color);
    border-radius: 10px;
    box-sizing: border-box;
}

.marker-cell:hover {
    box-shadow: inset 0px 5px 26px 11px rgba(214, 214, 214, 0.3);
}

button {
    width: 150px;
    height: 50px;
    border-radius: 10px;
    border: 2px solid rgba(0, 0, 0, 0);
    background-color: rgb(39, 39, 39);
    color: inherit;
    font-family: inherit;
    text-transform: uppercase;
    font-weight: 900;
    font-size: inherit;
}
button:hover {
    background-color: rgb(78, 78, 78);
    border-color: rgb(255, 255, 255);
}

button:active {
    background-color: white;
    color: var(--gameboard-bg-color);
}


footer {
    margin-top: auto;
}

